<resources>

    <string name="app_name">point-abc</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="show_map">show map</string>
    <string name="point_partten">(123.4,12.3)+123</string>
    <string name="visible">visible</string>
    <string name="button_set_distance">Set Distance</string>
    <string name="button_menu">Menu</string>
    <string name="menu_set_mypos">MyPos</string>
    <string name="menu_set_team">Team</string>
    <string name="menu_set_distance">Distance</string>
    <string name="text_team_id">Team ID</string>
    <string name="text_user_id">User ID</string>
    <string name="button_refresh">refresh</string>
    <string name="text_team_members">members</string>
    <string name="button_back">back</string>
    <string name="text_team">Team</string>

</resources>